--- a/pages/about.html
+++ b/pages/about.html
@@ -228,10 +228,11 @@
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>La Biennale di Venezia - CIMM</strong>
+                <strong>La Biennale di Venezia - CIMM Masterclass</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. All sites you create with the Mobirise web builder are mobile-friendly natively. No special actions required.
+                In the November 2019 I've been selected as a student for the CIMM - Multimedia Music Computer Center.
+                Here I've studied with
               </p>
             </div>
           </div>
@@ -240,21 +241,19 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" class="mbr-timeline-date display-7">
-                23 April 2025</p>
+                February 2021 - October 2021</p>
             </div>
           </div>
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_3.jpg" alt="dibox" title="">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_3.jpg" alt="dibox" title="">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/di_box_3.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/arpa.jpg" alt="dibox" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Form Builder</strong>
+                <strong>Fondazione Isabella Scelsi</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
                 This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. Select the theme that suits you. Each theme in the Mobirise site builder contains a set of unique blocks.
