--- a/pages/about.html
+++ b/pages/about.html
@@ -197,7 +197,7 @@
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
               <img src="https://www.gabrielavelitch.com/img/portfolio/mare_oscuro.jpg" alt="dibox" title="">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/with_lupone.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/with_lupone.JPG" alt="dibox" title="">
               <img src="https://www.gabrielavelitch.com/img/portfolio/planofoni.jpg" alt="dibox" title="">
             </div>
           </div>
