--- a/pages/about.html
+++ b/pages/about.html
@@ -231,8 +231,8 @@
                 <strong>La Biennale di Venezia - CIMM Masterclass</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                In the November 2019 I've been selected as a student for the CIMM - Multimedia Music Computer Center.
-                Here I've studied with
+                In the November 2019 I've been selected as a student for the CIMM - Multimedia Music Computer Center first edition.
+                Find out more here.
               </p>
             </div>
           </div>
@@ -256,7 +256,8 @@
                 <strong>Fondazione Isabella Scelsi</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. Select the theme that suits you. Each theme in the Mobirise site builder contains a set of unique blocks.
+                During my career, the pandemic took a lot but also gave me access to the digital events world. I have been nominated Sound Specialist at the Fondazione Isabella Scelsi after they heard about the successful system I was using at the
+                Conservatoire. Main duties were: design the AV system, stream, record and publish concerts or webinars.
               </p>
             </div>
           </div>
