--- a/pages/about.html
+++ b/pages/about.html
@@ -247,7 +247,7 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/arpa.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/arpa.jpg" alt="arpa mario bertoncini" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -266,22 +266,28 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" class="mbr-timeline-date display-7">
-                23 April 2025</p>
+                Skills</p>
             </div>
           </div>
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/corkino.jpg" alt="corkino" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Form Builder</strong>
+                <strong>Corkino - Arduino Mappable Contoller</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. Use Mobirise website building software to create multiple sites for commercial and non-profit projects.
+              <ul>
+                <li>Ultra-portable all-in-one MaxMSP controller</li>
+                <li>Compact, durable design for mobile performers and producers</li>
+                <li>Based on arduino uno board</li>
+                <li>Seamlessly integrates 1 to 1 with MaxMSP</li>
+                <li>USB-powered</li>
+              </ul>
               </p>
             </div>
           </div>
