--- a/pages/about.html
+++ b/pages/about.html
@@ -196,9 +196,9 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/mare_oscuro.jpg" alt="dibox" title="">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/with_lupone.JPG" alt="dibox" title="">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/planofoni.jpg" alt="dibox" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/mare_oscuro.jpg" alt="mareo oscuro" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/with_lupone.jpg" alt="con michelangelo lupone" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/planofoni.jpg" alt="planofoni" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
