--- a/pages/about.html
+++ b/pages/about.html
@@ -272,6 +272,7 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/corkino_in.jpg" alt="corkino" title="">
               <img src="https://www.gabrielavelitch.com/img/portfolio/corkino.jpg" alt="corkino" title="">
             </div>
           </div>
