--- a/pages/about.html
+++ b/pages/about.html
@@ -156,6 +156,10 @@
                 The CRM - Centro Ricerche Musicali is a centre where artists, musicians, scientists, architects and researchers work together. With them I’ve worked for festivals, concerts and sound art installations; from building the equipment till
                 the performance, I was taking care of
                 all the sound aspects. The best aspect of this role was that they were considering me as a creative more than a technician, so I had the possibility to grow really close to artistic management.
+                <br>
+                <br>
+                I was the main assistant of the laboratories and personal assistant of the Art Director. Duties were going from soldering circuits, to writing sound algorithms, to fit up festivals, concerts and sound art installations around Italy.
+                With the CRM I've learned how to work in a small team, where all the technical equipment is built specially for the event.
               </p>
             </div>
           </div>
