--- a/pages/about.html
+++ b/pages/about.html
@@ -301,22 +301,26 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" class="mbr-timeline-date display-7">
-                23 April 2025</p>
+                February 2022 - May 2022</p>
             </div>
           </div>
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/roma_tre.jpg" alt="università roma tre digital music technologies" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="timeline-text-wrapper">
               <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Form Builder</strong>
+                <strong>Università Roma Tre - Lecturer of Digital Music Technologies</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. You don't have to code to create your own site. Select one of available themes in the Mobirise sitebuilder.
+                I’m a proficient talker, able to jump from technical to non-technical conversations without losing the goal. This skill and my passion for theory helped me to be directly called by the University of Roma Tre for the position of
+                Lecturer of Music technologies.
+                The aim of the laboratory is to provide the student with basic skills concerning electroacoustic and multimedia technologies applied to music. In particular, the students
+                will be involved in the realisation of compositional and performative projects which foresee a practical use of the acquired technical specifications. Furthermore, the laboratory intends to offer the possibility of acquiring basic
+                knowledge in the field of music theory. The educational material used during the course comes from my personal notes, available on my website.
               </p>
             </div>
           </div>
