--- a/pages/about.html
+++ b/pages/about.html
@@ -324,6 +324,52 @@
             </div>
           </div>
         </div>
+        <div class="row timeline-element first-separline mb-5">
+          <div class="timeline-date col-12">
+            <div class="timeline-date-wrapper">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
+                November 2022</p>
+            </div>
+          </div>
+          <span class="iconBackground"></span>
+          <div class="col-12 col-md-6">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/cafe_oto.png" alt="cafe oto" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/cafe_oto_an.png" alt="cafe oto" title="">
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="timeline-text-wrapper">
+              <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
+                <strong>Cafe OTO - Acoustic Analysis of the Environment</strong>
+              </h4>
+              <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
+                Founded in 2008 and located in the Dalston district of London, United Kingdom, Cafe OTO is a
+                venue for experimental music ranging across all genres from folk, rock, noise, electronica, free
+                jazz, experimental and free improvisation performances.
+                <br>
+                <br>
+                Cafe OTO provides a home for creative new music that exists outside of the mainstream with an
+                evening programme of adventurous live music seven nights a week.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Prev/Next-->
+  <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-10">
+          <div class="mbr-section-btn align-center">
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/echi_dacqua.html">&nbsp; &nbsp; Echi d'Acqua &gt;&nbsp; &nbsp;</a>
+          </div>
+          <br>
+          <br>
+        </div>
       </div>
     </div>
   </section>
