--- a/pages/about.html
+++ b/pages/about.html
@@ -328,6 +328,32 @@
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
               <p style="text-align: center" class="mbr-timeline-date display-7">
+                August 2022 - October 2022</p>
+            </div>
+          </div>
+          <span class="iconBackground"></span>
+          <div class="col-12 col-md-6">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/cages.jpg" alt="università roma tre digital music technologies" title="">
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="timeline-text-wrapper">
+              <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
+                <strong>Riverside Studios - Cages</strong>
+              </h4>
+              <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
+                “Gabriela has been contracted to work with the technical team on the UK Production of CAGES (the production), which is produced by Scenario 2 Ltd and General Managed by Anthology Theatre Productions Ltd. A highly experienced
+                audio-visual technician for live performance, Gabrielas specialised technical knowledge and skills will be vital in order to train the UK team in operating the production to ensure it runs correctly. Gabriela will attend fit up,
+                technical rehearsals and early performances of the production at Riverside Studios.” - General Manager
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row timeline-element first-separline mb-5">
+          <div class="timeline-date col-12">
+            <div class="timeline-date-wrapper">
+              <p style="text-align: center" class="mbr-timeline-date display-7">
                 November 2022</p>
             </div>
           </div>
