--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -190,27 +190,7 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/1.webp" alt="" title="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6">
-            <div class="timeline-text-wrapper">
-              <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>CRM Laboratories</strong>
-              </h4>
-              <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. You don't have to code to create your own site. Select one of available themes in the Mobirise sitebuilder.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row timeline-element first-separline mb-5">
-          <div class="timeline-date col-12">
-          </div>
-          <span class="iconBackground"></span>
-          <div class="col-12 col-md-6">
-            <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/img_0.jpg" alt="" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/img_0.webp" alt="" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -219,7 +199,7 @@
                 <strong>Project Scheme</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. All sites you create with the Mobirise web builder are mobile-friendly natively. No special actions required.
+
               </p>
             </div>
           </div>
@@ -230,7 +210,27 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/schema_generale.webp" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/1.jpg" alt="" title="">
+            </div>
+          </div>
+          <div class="col-12 col-md-6">
+            <div class="timeline-text-wrapper">
+              <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
+                <strong>CRM Laboratories</strong>
+              </h4>
+              <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
+
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row timeline-element first-separline mb-5">
+          <div class="timeline-date col-12">
+          </div>
+          <span class="iconBackground"></span>
+          <div class="col-12 col-md-6">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/schema_generale.webp" alt="" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -239,7 +239,7 @@
                 <strong>General Scheme</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. Select the theme that suits you. Each theme in the Mobirise site builder contains a set of unique blocks.
+
               </p>
             </div>
           </div>
@@ -250,7 +250,9 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/7.jpg" alt="" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/4.jpg" alt="" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/5.jpg" alt="" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -259,67 +261,7 @@
                 <strong>Form Builder</strong>
               </h4>
               <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. Use Mobirise website building software to create multiple sites for commercial and non-profit projects.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row timeline-element first-separline mb-5">
-          <div class="timeline-date col-12">
-          </div>
-          <span class="iconBackground"></span>
-          <div class="col-12 col-md-6">
-            <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6">
-            <div class="timeline-text-wrapper">
-              <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Form Builder</strong>
-              </h4>
-              <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. You don't have to code to create your own site. Select one of available themes in the Mobirise sitebuilder.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row timeline-element first-separline mb-5">
-          <div class="timeline-date col-12">
-          </div>
-          <span class="iconBackground"></span>
-          <div class="col-12 col-md-6">
-            <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6">
-            <div class="timeline-text-wrapper">
-              <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Form Builder</strong>
-              </h4>
-              <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. All sites you create with the Mobirise web builder are mobile-friendly natively. No special actions required.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row timeline-element first-separline mb-5">
-          <div class="timeline-date col-12">
-          </div>
-          <span class="iconBackground"></span>
-          <div class="col-12 col-md-6">
-            <div class="image-wrapper">
-              <img src="assets/images/features3.jpg" alt="Mobirise" title="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6">
-            <div class="timeline-text-wrapper">
-              <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>Form Builder</strong>
-              </h4>
-              <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                This is a timeline block. Click on the blue gear icon to set the number of items in this timeline. Select the theme that suits you. Each theme in the Mobirise site builder contains a set of unique blocks.
+
               </p>
             </div>
           </div>
