--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -190,7 +190,7 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/img_0.webp" alt="" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/img_0.jpg" alt="" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -210,7 +210,7 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/1.jpg" alt="" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/1.webp" alt="" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
