--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -250,12 +250,22 @@
           <span class="iconBackground"></span>
           <div class="col-12 col-md-6">
             <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/7.jpg" alt="" title="">
-              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/4.jpg" alt="" title="">
-              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/5.jpg" alt="" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/7.webp" alt="" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/4.webp" alt="" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/5.webp" alt="" title="">
             </div>
           </div>
-          
+          <div class="col-12 col-md-6">
+            <div class="timeline-text-wrapper">
+              <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
+                <strong>Sound Art Installations</strong>
+              </h4>
+              <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
+
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
