--- a/pages/echi_dacqua.html
+++ b/pages/echi_dacqua.html
@@ -254,6 +254,7 @@
               <img src="https://www.gabrielavelitch.com/img/echi_dacqua/4.webp" alt="" title="">
               <img src="https://www.gabrielavelitch.com/img/echi_dacqua/5.webp" alt="" title="">
               <img src="https://www.gabrielavelitch.com/img/echi_dacqua/1.webp" alt="" title="">
+              <img src="https://www.gabrielavelitch.com/img/echi_dacqua/plan.jpg" alt="" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
