--- a/assets/internals/gkv_footer.html
+++ b/assets/internals/gkv_footer.html
@@ -5,7 +5,7 @@
                 <div class="social-list align-right pb-2">
                 <div class="soc-item">
                     </div><div class="soc-item">
-                        <a href="https://instagram.com/velitch?utm_medium=copy_link" target="_blank">
+                        <a href="https://instagram.com/effiemcfadyen?igshid=YmMyMTA2M2Y=" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div>
