--- a/index.html
+++ b/index.html
@@ -2,26 +2,6 @@
 <html>
 
 <head>
-
-  <!-- Google Analytics -->
-  <script>
-    (function(i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', '{{ site.google_analytics }}', 'auto');
-    ga('send', 'pageview');
-  </script>
-  <!-- End Google Analytics -->
-
-
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -97,9 +77,9 @@
     <div class="align-center container-fluid">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-10">
-          <h1 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>HELLO, WORLD!</strong></h1>
-          <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-1" style="text-align:center;"><strong>I'm Gabriela Velitch.</strong></h2>
-          <p class="mbr-text mbr-fonts-style mb-3 display-5" style="text-align:center;">| SONIC ENGINEER&nbsp; |&nbsp; ELECTROACOUSTIC COMPOSER&nbsp; |&nbsp; AV TECHNICIAN&nbsp; |</p>
+          <h1 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong></strong></h1>
+          <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-1" style="text-align:center;"><strong>EFFIE MCFADYEN</strong></h2>
+          <p class="mbr-text mbr-fonts-style mb-3 display-5" style="text-align:center;"></p>
 
           <div class="social-row display-7 mt-5" style="text-align:center;">
             <div class="soc-item">
