--- a/assets/internals/gkv_footer.html
+++ b/assets/internals/gkv_footer.html
@@ -13,7 +13,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">
-                    <a href="https://www.effiemcfadyen.com/index.html#header13-1" class="text-primary">© Effie Mcfadyen 2023</a>
+                    <a href="https://www.velitch.github.io/effiemcfadyen/index.html#header13-1" class="text-primary">© Effie Mcfadyen 2023</a>
 
                   </p>
 
