--- a/assets/internals/gkv_nav.html
+++ b/assets/internals/gkv_nav.html
@@ -3,11 +3,11 @@
     <div class="container">
       <div class="navbar-brand">
         <span class="navbar-logo">
-          <a href="https://www.velitch.github.io/effiemcfadyen/index.html">
-            <img width="100%" height="100%" src="https://www.velitch.github.io/effiemcfadyen/assets/images/favicon.png" alt="" style="height: 3rem;">
+          <a href="https://www.gabrielavelitch.com/index.html">
+            <img width="100%" height="100%" src="https://www.gabrielavelitch.com/assets/images/favicon-96x121.png" alt="" style="height: 3rem;">
           </a>
         </span>
-        <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.velitch.github.io/effiemcfadyen/index.html">Effie McFadyen</a></span>
+        <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -20,9 +20,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.velitch.github.io/effiemcfadyen/pages/artworks.html">ARTWORKS</a>
+          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/projects.html">PROJECTS</a>
           </li>
-          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.velitch.github.io/effiemcfadyen/pages/about.html">ABOUT ME</a>
+          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a>
+          </li>
+          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/learn.html">LEARN</a>
+          </li>
+          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/about.html">ABOUT ME</a>
           </li>
         </ul>
       </div>
