--- a/pages/tips/how_to_make_a_telegram_bot_token.html
+++ b/pages/tips/how_to_make_a_telegram_bot_token.html
@@ -95,8 +95,8 @@
             <ol>
               <li>Open Telegram</li>
               <li>Search @BotFather in Search chats</li>
-              <li>Type /start</li>
-              <li>Type /newbot</li>
+              <li>Type <code>/start</code></li>
+              <li>Type <code>/newbot</code></li>
               <li>Insert your username, it must end in 'bot'(example: yourbotnameBot or yourbotname_bot)</li>
               <li>Done!</li>
             </ol>
