--- a/pages/tips/how_to_make_a_telegram_bot_token.html
+++ b/pages/tips/how_to_make_a_telegram_bot_token.html
@@ -94,7 +94,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
             <ol>
               <li>Open Telegram</li>
-              <li>Search @BotFather in Search chats</li>
+              <li>Search <code>BotFather</code> in Search chats</li>
               <li>Type <code>/start</code></li>
               <li>Type <code>/newbot</code></li>
               <li>Insert your username, it must end in 'bot'(example: yourbotnameBot or yourbotname_bot)</li>
