--- a/assets/internals/gkv_nav.html
+++ b/assets/internals/gkv_nav.html
@@ -1,3 +1,13 @@
+<div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 <section data-bs-version="5.1" class="menu menu2 cid-sZffxwg6qa" once="menu" id="menu2-23">
   <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
     <div class="container">
