--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -68,6 +68,14 @@
 
 <body>
 
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
+    }
+  </script>
 
   <!-- Navbar-->
   <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_nav.html"></div>
