--- a/pages/about.html
+++ b/pages/about.html
@@ -168,6 +168,8 @@
               <img src="https://www.gabrielavelitch.com/img/portfolio/crm_team.jpg" alt="CRM centro ricerrche musicali team" title="">
               <img src="https://www.gabrielavelitch.com/img/portfolio/crm.jpg" alt="CRM centro ricerrche musicali team" title="">
               <img src="https://www.gabrielavelitch.com/img/portfolio/olofoni_2.jpg" alt="CRM centro ricerrche musicali team" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/mare_oscuro.jpg" alt="mareo oscuro" title="">
+              <img src="https://www.gabrielavelitch.com/img/portfolio/planofoni.jpg" alt="planofoni" title="">
             </div>
           </div>
           <div class="col-12 col-md-6">
@@ -183,6 +185,9 @@
                 <br>
                 I was the main assistant of the laboratories and personal assistant of the Art Director. Duties were going from soldering circuits, to writing sound algorithms, to fit up festivals, concerts and sound art installations around Italy.
                 With the CRM I've learned how to work in a small team, where all the technical equipment is built specially for the event.
+                <br>
+                <br>
+                I've been lucky to grow my skills in a multidisciplinary context where arts, sciences and technologies are merged all in one.
               </p>
             </div>
           </div>
@@ -213,31 +218,7 @@
             </div>
           </div>
         </div>
-        <div class="row timeline-element first-separline mb-5">
-          <div class="timeline-date col-12">
-            <div class="timeline-date-wrapper">
-              <p style="text-align: center" class="mbr-timeline-date display-7">
-                December 2018 - October 2020</p>
-            </div>
-          </div>
-          <span class="iconBackground"></span>
-          <div class="col-12 col-md-6">
-            <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/mare_oscuro.jpg" alt="mareo oscuro" title="">
-              <img src="https://www.gabrielavelitch.com/img/portfolio/planofoni.jpg" alt="planofoni" title="">
-            </div>
-          </div>
-          <div class="col-12 col-md-6">
-            <div class="timeline-text-wrapper">
-              <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
-                <strong>CRM</strong>
-              </h4>
-              <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
-                I've been lucky to grow my skills in a multidisciplinary context where arts, sciences and technologies are merged all in one. My personal and team projects have consistently been a product of those fields and the opportunity to work
-                with you would be a continuum of my passions. </p>
-            </div>
-          </div>
-        </div>
+
         <div class="row timeline-element first-separline mb-5">
           <div class="timeline-date col-12">
             <div class="timeline-date-wrapper">
