Creation of new category

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -208,6 +208,63 @@
               </div>
               <!-- end Cards Grid-->
 
+              <!-- Acoustic Cards Grid-->
+              <div class="card mb-3">
+                <div class="card-header" role="tab" id="headingOne">
+                  <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_1" aria-expanded="false"
+                    aria-controls="collapse1">
+                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Automotive Sound (x)</strong></h6>
+                    <span class="sign mbr-iconfont mbri-arrow-down"></span>
+                  </a>
+                </div>
+                <div id="collapse1_1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                  <div class="panel-body">
+
+                    <!-- Cards Grid-->
+                    <section data-bs-version="5.1" class="features3 cid-t16lhyK4qd" id="features3-2k">
+                      <div class="container">
+                        <div class="row mt-4">
+
+                          <!-- new Cards-->
+                          <div class="item features-image сol-12 col-md-6 col-lg-3">
+                            <div class="item-wrapper">
+                              <div class="item-img">
+                                <img src="https://www.gabrielavelitch.com/img/ai/automotive_sound.webp" data-slide-to="0" data-bs-slide-to="0">
+                              </div>
+                              <div class="item-content">
+                                <h5 class="item-title mbr-fonts-style display-7">
+                                  <br><strong>Acustica degli Ambienti Musicali</strong>
+                                </h5>
+                              </div>
+                              <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
+                                  &gt;</a></div>
+                            </div>
+                          </div>
+                          <!-- end Cards-->
+
+                          <!-- new Cards-->
+                          <div class="item features-image сol-12 col-md-6 col-lg-3">
+                            <div class="item-wrapper">
+                              <div class="item-img">
+                                <img src="https://www.gabrielavelitch.com/img/site/strumenti_musicali.webp" data-slide-to="1" data-bs-slide-to="1">
+                              </div>
+                              <div class="item-content">
+                                <h5 class="item-title mbr-fonts-style display-7">
+                                  <br><strong>Acustica degli Strumenti Musicali</strong>
+                                </h5>
+                              </div>
+                              <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming Soon
+                                  &gt;</a></div>
+                            </div>
+                          </div>
+                          <!-- end Cards-->
+                        </div>
+                      </div>
+                  </div>
+                </div>
+                <!-- end Cards Grid-->
+
+
               <!-- Digital Music Technologies Cards Grid-->
 
               <div class="card mb-3">
@@ -284,7 +341,7 @@
                   <div class="card-header" role="tab" id="headingFour">
                     <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse4_4" aria-expanded="false"
                       aria-controls="collapse4">
-                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History (4)</strong></h6>
+                      <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>History of Music (4)</strong></h6>
                       <span class="sign mbr-iconfont mbri-arrow-down"></span>
                     </a>
                   </div>
