--- a/pages/learn.html
+++ b/pages/learn.html
@@ -233,7 +233,7 @@
                               </div>
                               <div class="item-content">
                                 <h5 class="item-title mbr-fonts-style display-7">
-                                  <br><strong>Acustica degli Ambienti Musicali</strong>
+                                  <br><strong>Automotive Sound: An Overview</strong>
                                 </h5>
                               </div>
                               <div class="mbr-section-btn item-footer mt-2"><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html" class="btn btn-primary item-btn display-7" target="_blank">Learn More
@@ -242,22 +242,6 @@
                           </div>
                           <!-- end Cards-->
 
-                          <!-- new Cards-->
-                          <div class="item features-image сol-12 col-md-6 col-lg-3">
-                            <div class="item-wrapper">
-                              <div class="item-img">
-                                <img src="https://www.gabrielavelitch.com/img/site/strumenti_musicali.webp" data-slide-to="1" data-bs-slide-to="1">
-                              </div>
-                              <div class="item-content">
-                                <h5 class="item-title mbr-fonts-style display-7">
-                                  <br><strong>Acustica degli Strumenti Musicali</strong>
-                                </h5>
-                              </div>
-                              <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn btn-primary item-btn display-7" target="_blank">Coming Soon
-                                  &gt;</a></div>
-                            </div>
-                          </div>
-                          <!-- end Cards-->
                         </div>
                       </div>
                   </div>
