--- a/pages/learn.html
+++ b/pages/learn.html
@@ -373,7 +373,7 @@
                             <div class="item features-image сol-12 col-md-6 col-lg-3">
                               <div class="item-wrapper">
                                 <div class="item-img">
-                                  <img src="https://www.gabrielavelitch.com/img/site/storiadue.webp" data-slide-to="2" data-bs-slide-to="2">
+                                  <img src="https://www.gabrielavelitch.com/img/ai/storia1.webp" data-slide-to="2" data-bs-slide-to="2">
                                 </div>
                                 <div class="item-content">
                                   <h5 class="item-title mbr-fonts-style display-7">
@@ -389,7 +389,7 @@
                             <div class="item features-image сol-12 col-md-6 col-lg-3">
                               <div class="item-wrapper">
                                 <div class="item-img">
-                                  <img src="https://www.gabrielavelitch.com/img/site/storiadue.webp" data-slide-to="3" data-bs-slide-to="3">
+                                  <img src="https://www.gabrielavelitch.com/img/ai/storia1.webp" data-slide-to="3" data-bs-slide-to="3">
                                 </div>
                                 <div class="item-content">
                                   <h5 class="item-title mbr-fonts-style display-7">
