--- a/pages/learn.html
+++ b/pages/learn.html
@@ -208,16 +208,16 @@
               </div>
               <!-- end Cards Grid-->
 
-              <!-- Acoustic Cards Grid-->
+              <!-- Automotive Cards Grid-->
               <div class="card mb-3">
-                <div class="card-header" role="tab" id="headingOne">
+                <div class="card-header" role="tab" id="headingTwo">
                   <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="https://www.gabrielavelitch.com/pages/maxmsptools.html#collapse1_1" aria-expanded="false"
                     aria-controls="collapse2">
                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-5"><strong>Automotive Sound (1)</strong></h6>
                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                   </a>
                 </div>
-                <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                   <div class="panel-body">
 
                     <!-- Cards Grid-->
