--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -130,7 +130,13 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics</b></i></a></li>
+            <li><a href="https://en-uk.sennheiser.com/ambeo-mobility"><i><b>Sennheiser AMBEO Mobility</b></i></a></li>
+            <li><a href="https://professional.dolby.com/music/dolby-atmos-for-cars/"><i><b>Dolby Atmos for Cars</b></i></a></li>
+            <li><a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB
+"><i><b>Genelec Immersive Hub</b></i></a></li>
+            <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>Angelo Farina - HOA Explocit Formulas</b></i></a></li>
+            <li><a href="https://professional.dolby.com/music/dolby-atmos-for-cars/"><i><b>Giusepe Silvi - METP</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>Gabriela Velitch - Acoustic of Musical Enviroments</b></i></a></li>
           </ul>
           </p>
         </div>
