--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -82,7 +82,7 @@
         <div class="card col-12 col-lg-10">
           <div class="card-wrapper">
             <div class="card-box align-center">
-              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>AUTOMOTIVE SOUND</strong></h4>
+              <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>AUTOMOTIVE IMMERSIVE SOUND</strong></h4>
               <h3 class="card-title mbr-fonts-style align-center"><strong>An Overview</strong></h3>
             </div>
           </div>
@@ -105,12 +105,11 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_00_00_come_affrontare_lo_studio_dellacustica_degli_ambienti.html" target="_blank"><b>01. Come Affrontare lo Studio dell'Acustica degli
-                  Ambienti</b></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/automotive_immersive_sound/01_00_00_the_need_of_space.html" target="_blank"><b>01. The Need of Space</b></a></li>
             <ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_01_00_lo_spazio_come_un_filtro.html" target="_blank"><b>01.01. Lo Spazio Come un Filtro</b></a></li>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_spazi_musicali/01_02_00_tre_metodi_di_studio.html" target="_blank"><b>01.02. Tre Metodi di Studio</b></a></li>
-            </ul>
+              Immersive Audio Formats
+              Configuration and Calibration
+              3D Sound: What Do You Mean?
 
               </p>
         </div>
@@ -133,9 +132,16 @@
             <li><a href="https://en-uk.sennheiser.com/ambeo-mobility"><i><b>Sennheiser AMBEO Mobility</b></i></a></li>
             <li><a href="https://professional.dolby.com/music/dolby-atmos-for-cars/"><i><b>Dolby Atmos for Cars</b></i></a></li>
             <li><a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB
-"><i><b>Genelec Immersive Hub</b></i></a></li>
-            <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>Angelo Farina - HOA Explocit Formulas</b></i></a></li>
-            <li><a href="https://professional.dolby.com/music/dolby-atmos-for-cars/"><i><b>Giusepe Silvi - METP</b></i></a></li>
+"><i><b>Genelec - Immersive Hub</b></i></a></li>
+            <li><a href="https://www.genelec.com/calibration-acoustics"><i><b>Genelec - Calibration & Acoustics</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>Acoustics for Engineers</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili, Tesi di Marco Giordano</b></i></a></li>
+            <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>Angelo Farina - Explicit Ambix formulas for High Order Ambisonics</b></i></a></li>
+            <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>Giuseppe Silvi - METP - Musica Elettronica Tecnologia Musicale (open-book)</b></i></a></li>
+            <li><a href="https://www.vrtonung.de/en/automotive-audio-3d/"><i><b>New car sound technology with Automotive Audio and 3D speakers</b></i></a></li>
+            <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>Principi Base di Acustica, capitolo 1 - Angelo Farina</b></i></a></li>
+            <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>Transfer-Function Measurement with Sweeps - MULLER, MASSARANI</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>Gabriela Velitch - Acoustic of Musical Enviroments</b></i></a></li>
           </ul>
           </p>
