--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -134,12 +134,14 @@
             <li><a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB
 "><i><b>Genelec - Immersive Hub</b></i></a></li>
             <li><a href="https://www.genelec.com/calibration-acoustics"><i><b>Genelec - Calibration & Acoustics</b></i></a></li>
+            <li><a href="https://automotive.bose.com/road-ahead/active-sound-management#electric-vehicle-sound-enhancement"><i><b>Bose - Active Sound Management</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>Acoustics for Engineers</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili, Tesi di Marco Giordano</b></i></a></li>
             <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>Angelo Farina - Explicit Ambix formulas for High Order Ambisonics</b></i></a></li>
             <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>Giuseppe Silvi - METP - Musica Elettronica Tecnologia Musicale (open-book)</b></i></a></li>
             <li><a href="https://www.vrtonung.de/en/automotive-audio-3d/"><i><b>New car sound technology with Automotive Audio and 3D speakers</b></i></a></li>
+            <li><a href="https://audioxpress.com/article/automotive-audio-audio-objects-as-platform-technology-in-vehicles"><i><b>Automotive Audio: Audio Objects as Platform Technology in Vehicles</b></i></a></li>
             <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>Principi Base di Acustica, capitolo 1 - Angelo Farina</b></i></a></li>
             <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>Transfer-Function Measurement with Sweeps - MULLER, MASSARANI</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>Gabriela Velitch - Acoustic of Musical Enviroments</b></i></a></li>
