--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -105,11 +105,12 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/automotive_immersive_sound/01_00_00_the_need_of_space.html" target="_blank"><b>01. The Need of Space</b></a></li>
+            <li><a href="" target="_blank"><b>The Need of Space</b></a></li>
+            <li><a href="" target="_blank"><b>Immersive Audio Formats</b></a></li>
+            <li><a href="" target="_blank"><b>Configuration and Calibration</b></a></li>
+            <li><a href="" target="_blank"><b>3D Sound: What Do You Mean?</b></a></li>
+            <li><a href="" target="_blank"><b>Electric Vehicles: What's Possible</b></a></li>
             <ul>
-              Immersive Audio Formats
-              Configuration and Calibration
-              3D Sound: What Do You Mean?
 
               </p>
         </div>
