--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -108,6 +108,9 @@
             <li><a href="" target="_blank"><b>The Need of Space</b></a></li>
             <li><a href="" target="_blank"><b>Immersive Audio Formats</b></a></li>
             <li><a href="" target="_blank"><b>Configuration and Calibration</b></a></li>
+            <ul>
+              <li><a href="" target="_blank"><b>List of Softwares</b></a></li>
+            </ul>
             <li><a href="" target="_blank"><b>3D Sound: What Do You Mean?</b></a></li>
             <li><a href="" target="_blank"><b>Electric Vehicles: What's Possible</b></a></li>
             <ul>
