--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -144,12 +144,18 @@
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili, Tesi di Marco Giordano</b></i></a></li>
             <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>Angelo Farina - Explicit Ambix formulas for High Order Ambisonics</b></i></a></li>
             <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>Giuseppe Silvi - METP - Musica Elettronica Tecnologia Musicale (open-book)</b></i></a></li>
-            <li><a href="https://www.vrtonung.de/en/automotive-audio-3d/"><i><b>New car sound technology with Automotive Audio and 3D speakers</b></i></a></li>
-            <li><a href="https://audioxpress.com/article/automotive-audio-audio-objects-as-platform-technology-in-vehicles"><i><b>Automotive Audio: Audio Objects as Platform Technology in Vehicles</b></i></a></li>
             <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>Principi Base di Acustica, capitolo 1 - Angelo Farina</b></i></a></li>
             <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>Transfer-Function Measurement with Sweeps - MULLER, MASSARANI</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>Gabriela Velitch - Acoustic of Musical Enviroments</b></i></a></li>
           </ul>
+          <h5 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
+            <strong>Articles</strong>
+          </h5>
+          <ul>
+          <li><a href="https://audioxpress.com/article/automotive-audio-audio-objects-as-platform-technology-in-vehicles"><i><b>Automotive Audio: Audio Objects as Platform Technology in Vehicles</b></i></a></li>
+          <li><a href="https://www.vrtonung.de/en/automotive-audio-3d/"><i><b>New car sound technology with Automotive Audio and 3D speakers</b></i></a></li>
+          <li><a href="https://www.asoundeffect.com/the-future-sound-of-cars/"><i><b>The Future Sound of Cars with Richard Devine: How Jaguar’s I-PACE is Redefining the Engine Sound</b></i></a></li>
+        </ul>
           </p>
         </div>
       </div>
