--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -106,14 +106,18 @@
           <p class="mbr-text mbr-fonts-style display-7">
           <ul>
             <li><a href="" target="_blank"><b>The Need of Space</b></a></li>
+            <li><a href="" target="_blank"><b>3D Sound: What Do You Mean?</b></a></li>
             <li><a href="" target="_blank"><b>Immersive Audio Formats</b></a></li>
             <li><a href="" target="_blank"><b>Configuration and Calibration</b></a></li>
             <ul>
               <li><a href="" target="_blank"><b>List of Softwares</b></a></li>
             </ul>
-            <li><a href="" target="_blank"><b>3D Sound: What Do You Mean?</b></a></li>
             <li><a href="" target="_blank"><b>Electric Vehicles: What's Possible</b></a></li>
             <ul>
+              <ul>
+                <li><a href="" target="_blank"><b>Countless Field of Control</b></a></li>
+                <li><a href="" target="_blank"><b>Real Time +1 sample</b></a></li>
+              </ul>
 
               </p>
         </div>
