--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -157,12 +157,11 @@
             <li><a href="https://en-uk.sennheiser.com/ambeo-mobility"><i><b>Sennheiser AMBEO Mobility</b></i></a></li>
             <li><a href="https://professional.dolby.com/music/dolby-atmos-for-cars/"><i><b>Dolby Atmos for Cars</b></i></a></li>
             <li><a href="https://automotive.bose.com/road-ahead/active-sound-management#electric-vehicle-sound-enhancement"><i><b>Bose - Active Sound Management</b></i></a></li>
-
-            <li><a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB
-"><i><b>Genelec - Immersive Hub</b></i></a></li>
-<li><a href="https://audioxpress.com/article/automotive-audio-audio-objects-as-platform-technology-in-vehicles"><i><b>Automotive Audio: Audio Objects as Platform Technology in Vehicles</b></i></a></li>
-<li><a href="https://www.vrtonung.de/en/automotive-audio-3d/"><i><b>New car sound technology with Automotive Audio and 3D speakers</b></i></a></li>
-<li><a href="https://www.asoundeffect.com/the-future-sound-of-cars/"><i><b>The Future Sound of Cars with Richard Devine: How Jaguar’s I-PACE is Redefining the Engine Sound</b></i></a></li>
+            <li><a href="https://hal.science/hal-03456711/file/I3DA_SpatialSoundDesign_DUPRE_FinalSubmission.pdf"><i><b>Spatial Sound Design in a Car Cockpit : Challenges and Perspectives</b></i></a></li>
+            <li><a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB"><i><b>Genelec - Immersive Hub</b></i></a></li>
+            <li><a href="https://audioxpress.com/article/automotive-audio-audio-objects-as-platform-technology-in-vehicles"><i><b>Automotive Audio: Audio Objects as Platform Technology in Vehicles</b></i></a></li>
+            <li><a href="https://www.vrtonung.de/en/automotive-audio-3d/"><i><b>New car sound technology with Automotive Audio and 3D speakers</b></i></a></li>
+            <li><a href="https://www.asoundeffect.com/the-future-sound-of-cars/"><i><b>The Future Sound of Cars with Richard Devine: How Jaguar’s I-PACE is Redefining the Engine Sound</b></i></a></li>
           </ul>
           </p>
         </div>
