--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -158,6 +158,7 @@
             <li><a href="https://en-uk.sennheiser.com/ambeo-mobility"><i><b>Sennheiser AMBEO Mobility</b></i></a></li>
             <li><a href="https://professional.dolby.com/music/dolby-atmos-for-cars/"><i><b>Dolby Atmos for Cars</b></i></a></li>
             <li><a href="https://automotive.bose.com/road-ahead/active-sound-management#electric-vehicle-sound-enhancement"><i><b>Bose - Active Sound Management</b></i></a></li>
+            <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and 3D Ambisonics surround systems for automotive applications"</b></i></a></li>
             <li><a href="https://hal.science/hal-03456711/file/I3DA_SpatialSoundDesign_DUPRE_FinalSubmission.pdf"><i><b>Spatial Sound Design in a Car Cockpit: Challenges and Perspectives</b></i></a></li>
             <li><a href="http://pcfarina.eng.unipr.it/Public/I3DA-2021/Low_Frequency_Simulations_for_Ambisonics_Auralization_of_a_Car_Sound_System.pdf"><i><b>Low Frequency Simulations for Ambisonics Auralization of a Car Sound System</b></i></a></li>
             <li><a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB"><i><b>Genelec - Immersive Hub</b></i></a></li>
