--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -135,11 +135,8 @@
             <strong>APPENDIX</strong>
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
-          <h5 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
-            <strong><a
-                href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB#section-cmscontent_INSTANCE_rAmfFFB10rhh"
-                target="_blank"><b>Genelec Immersive Hub - Immersive Audio Formats</b></a></strong>
-          </h5>
+            <a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB#section-cmscontent_INSTANCE_rAmfFFB10rhh"
+              target="_blank"><b>Genelec Immersive Hub - Immersive Audio Formats</b></a>
           <ul>
             <li>Dolby Atmos</li>
             <li>Auro-3D</li>
@@ -149,6 +146,7 @@
             <li>ITU-R and Pure Research</li>
             <li>THX Spatial Audio</li>
           </ul>
+          <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>A. Farina - "Explicit Ambix formulas for High Order Ambisonics"</b></i></a></li>
           </p>
         </div>
       </div>
@@ -171,13 +169,13 @@
           <ul>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>Acoustics for Engineers</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili, Tesi di Marco Giordano</b></i></a></li>
-            <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>Angelo Farina - Explicit Ambix formulas for High Order Ambisonics</b></i></a></li>
-            <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>Principi Base di Acustica, capitolo 1 - Angelo Farina</b></i></a></li>
-            <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>Transfer-Function Measurement with Sweeps - MULLER, MASSARANI</b></i></a></li>
-            <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>Giuseppe Silvi - METP - Musica Elettronica Tecnologia Musicale (open-book)</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>M. Giordano - "Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili" (1996)</b></i></a></li>
+            <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>A. Farina - Principi Base di Acustica, capitolo 1</b></i></a></li>
+            <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>S. Muller, P. Massarani - "Transfer-Function Measurement with Sweeps" (2001)</b></i></a></li>
+            <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>G. Silvi - METP - "Musica Elettronica Tecnologia e Pensiero" (open-book since )</b></i></a></li>
             <li><a href="https://www.genelec.com/calibration-acoustics"><i><b>Genelec - Calibration & Acoustics</b></i></a></li>
-            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>Gabriela Velitch - Acoustic of Musical Enviroments</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>G. K. Velitchkova - "Acoustic of Musical Enviroments" (2022)</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Cafe_OTO_Acoustic_Analysis_of_the_Environment.pdf"><i><b>G. K. Velitchkova - "Cafe OTO, Acoustic Analysis of the Environment" (2023)</b></i></a></li>
           </ul>
           <h5 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5">
             <strong>Automotive</strong>
