--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -136,7 +136,7 @@
           </h4>
           <p class="mbr-text mbr-fonts-style display-7">
             <a href="https://www.genelec.com/immersive-hub?https%3A%2F%2Fwww.genelec.com%2Fimmersive-hub%3Futm_source=google&utm_medium=cpc&utm_campaign=immersive_audio_hub&gad_source=1&gclid=Cj0KCQiA6vaqBhCbARIsACF9M6mEjSI_UHT6bI2E0eVQ-ODhwtf6aV0XGWvJ-1k20HHYQqiO4Uz737caAuZ-EALw_wcB#section-cmscontent_INSTANCE_rAmfFFB10rhh"
-              target="_blank"><b>Genelec Immersive Hub - Immersive Audio Formats</b></a>
+              target="_blank"><b>Genelec Immersive Hub - Immersive Audio Formats:</b></a>
           <ul>
             <li>Dolby Atmos</li>
             <li>Auro-3D</li>
@@ -146,7 +146,7 @@
             <li>ITU-R and Pure Research</li>
             <li>THX Spatial Audio</li>
           </ul>
-          <li><a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>A. Farina - "Explicit Ambix formulas for High Order Ambisonics"</b></i></a></li>
+          <a href="http://pcfarina.eng.unipr.it/Aurora/HOA_explicit_formulas.htm"><i><b>A. Farina - "Explicit Ambix formulas for High Order Ambisonics"</b></i></a>
           </p>
         </div>
       </div>
