--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -173,7 +173,6 @@
             <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>A. Farina - Principi Base di Acustica, capitolo 1</b></i></a></li>
             <li><a href="http://www.asp.c.dendai.ac.jp/thesis/zTransfer-Function_Measurement_with_Sweeps_AES_2001443.PDF"><i><b>S. Muller, P. Massarani - "Transfer-Function Measurement with Sweeps" (2001)</b></i></a></li>
             <li><a href="https://gitlab.com/giuseppesilvi/metp"><i><b>G. Silvi - METP - "Musica Elettronica Tecnologia e Pensiero" (open-book since )</b></i></a></li>
-            <li><a href="https://www.genelec.com/calibration-acoustics"><i><b>Genelec - Calibration & Acoustics</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/pages/learn/acustica_degli_ambienti_musicali.html"><i><b>G. K. Velitchkova - "Acoustic of Musical Enviroments" (2022)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Cafe_OTO_Acoustic_Analysis_of_the_Environment.pdf"><i><b>G. K. Velitchkova - "Cafe OTO, Acoustic Analysis of the Environment" (2023)</b></i></a></li>
           </ul>
@@ -193,7 +192,7 @@
     </div>
   </section>
 
-  <!-- Bibliografia-->
+  <!-- Webografia-->
 
   <section data-bs-version="5.1" class="content5 cid-sZjlSBcUZU" id="content5-29">
     <div class="container">
